alignment and remove practice issue #i44

--- a/resources/assets/less/networks.less
+++ b/resources/assets/less/networks.less
@@ -118,3 +118,21 @@ p.add_title{
     border-top: 1px solid @background-color-6;
     margin: 0 2em 0 2em;
 }
+
+.save_network_button {
+    color: #000;
+    background-color: #00B6F1;
+    border-color: #fff;
+    margin-left: 15.5em;
+}
+
+#dontsave_network {
+    margin-right: 11em;
+    color: #000;
+    background-color: #00B6F1;
+    border-color: #fff;
+    &:hover{
+        background-color: #0193D7;
+        color: #fff;
+    }
+}
